@@ -61,9 +61,17 @@
 				-->
                 <property name="port"><value>${http.port}</value></property>
 		        <property name="redirectPort"><value>${https.port}</value></property>
-		        <property name="enableLookups"><value>false</value></property>
+                <property name="enableLookups"><value>false</value></property>
+                <property name="useIPVHosts"><value>true</value></property>
 			</bean>
 	    </property>
+	    	
+        <property name="address">
+            <bean class="java.net.InetSocketAddress">
+                <constructor-arg index="0" type="java.lang.String" value="${http.host}" />  
+                <constructor-arg index="1" type="int" value="${http.port}" />  
+            </bean>	
+        </property>
 	    	
         <property name="baseHost">
 	       <bean class="org.apache.catalina.core.StandardHost">
